modify Sprint mission 3